# vox-py-sdk

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  claude-code-review.yml
crates/vox-media/: Cargo.toml  pyproject.toml
crates/vox-media/src/: audio.rs  codec.rs  lib.rs  quic.rs  state.rs  video.rs
crates/vox-mls/: Cargo.toml  pyproject.toml
crates/vox-mls/src/: codec.rs  group.rs  identity.rs  lib.rs  provider.rs
crates/vox-mls/tests/: round_trip.rs
scripts/: dev-setup.sh
src/vox_sdk/: __init__.py  _media.py  client.py  errors.py  gateway.py  http.py  pagination.py  permissions.py  rate_limit.py
src/vox_sdk/api/: __init__.py  auth.py  bots.py  channels.py  dms.py  e2ee.py  embeds.py  emoji.py  federation.py  files.py  gifs.py  invites.py  members.py  messages.py  moderation.py  roles.py  search.py  server.py  sync.py  users.py  voice.py  webhooks.py
src/vox_sdk/crypto/: __init__.py  backup.py  manager.py
src/vox_sdk/models/: __init__.py  auth.py  base.py  bots.py  channels.py  dms.py  e2ee.py  emoji.py  enums.py  errors.py  events.py  federation.py  files.py  gifs.py  invites.py  members.py  messages.py  moderation.py  roles.py  server.py  sync.py  users.py  voice.py
tests/: conftest.py  test_api_groups.py  test_client.py  test_crypto.py  test_crypto_manager.py  test_errors.py  test_gateway.py  test_http.py  test_media_video.py  test_models.py  test_pagination.py  test_permissions.py  test_rate_limit.py
tests/integration/: conftest.py  test_auth.py  test_bots.py  test_channels.py  test_dms.py  test_e2ee.py  test_emoji.py  test_errors.py  test_federation_admin.py  test_files.py  test_gateway_live.py  test_invites.py  test_members.py  test_messages.py  test_mls.py  test_moderation.py  test_roles.py  test_search.py  test_server.py  test_stickers.py  test_sync.py  test_users.py  test_voice.py  test_webhooks.py
