[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vox-sdk"
version = "0.1.0"
description = "Python client SDK for the Vox protocol"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.0",
    "zstandard>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
media = [
    "maturin>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.maturin]
python-source = "src"
module-name = "vox_sdk._media"
manifest-path = "crates/vox-media/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=vox_sdk --cov-report=term-missing"
