[package]
name = "vox-mls"
version = "0.1.0"
edition = "2021"

[lib]
name = "vox_mls"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
openmls = "0.8.1"
openmls_traits = "0.5.0"
openmls_libcrux_crypto = "0.3.1"
openmls_basic_credential = "0.5.0"
tls_codec = "0.4.2"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openmls_sqlite_storage =  "0.2.0"
rusqlite = { version = "0.32", features = ["bundled", "serialize", "backup"] }
aes-gcm = "0.10"

